# auto_tester

./: .gitignore  README.md  pyproject.toml  requirements.txt
auto_tester/pages/: base_page.py  sbis_page.py  tensor_page.py
tests/: test_first_scenario.py  test_second_scenario.py  test_third_scenario.py
