[tool.poetry]
name = "auto-tester"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.13.0"
requests = "^2.31.0"
pytest = "^7.4.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
types-requests = "^2.31.0.5"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
